--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal.jpg" alt="">
+								<img src="img/personal-2.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
+									<h3>Rushan Jayasundara</h3>
+									<h4>Junior Embedded System Developer</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 17st June, 1997</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 94 (71) 9505180</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> rushanthasindu10@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Sri Lanka</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -78,7 +78,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Photoshop <span class="counter">90</span>%</h4>
+									<h4>PHP <span class="counter">90</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -86,7 +86,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Illustrator <span class="counter">70</span>%</h4>
+									<h4>Java <span class="counter">70</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -94,7 +94,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sublime <span class="counter">95</span>%</h4>
+									<h4>VS COde <span class="counter">95</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
